// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Card Capacity Planing Cardset 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 jlPsmj sc-fzqBkg buXsnU"
    >
      <div
        class="Box-sc-1qu1edy-0 sc-fznWOq ELElF sc-fzolEj jKMuPZ"
      >
        <h3
          class="sc-AxheI sc-Axmtr eWqABJ"
          font-size="20px"
          font-weight="500"
        >
          Title
        </h3>
        <button
          aria-expanded="false"
          aria-haspopup="true"
          aria-label="Open"
          class="IconicButton__WrapperButton-sc-1u3dojp-1 jsJEWy sc-fzpans cKJzHK"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="sc-AxirZ jrPxI"
            color="currentColor"
            fill="currentColor"
            focusable="false"
            height="32px"
            icon="more"
            p="half"
            viewBox="0 0 24 24"
            width="32px"
          >
            <path
              d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
            />
          </svg>
        </button>
        <div
          class="Box-sc-1qu1edy-0 sc-AxjAm APdvp"
        >
          <div
            class="Box-sc-1qu1edy-0 ipHJHH"
          >
            <p
              class="sc-AxhCb hpmHVQ"
              color="currentColor"
              font-size="16px"
            >
              Item: Some item
            </p>
            <p
              class="sc-AxhCb hpmHVQ"
              color="currentColor"
              font-size="16px"
            >
              Quantity: 746.00 ea
            </p>
          </div>
          <div
            class="Box-sc-1qu1edy-0 jlPsmj"
          >
            <p
              class="sc-AxhCb fQCxOQ"
              color="currentColor"
              font-size="16px"
            >
              Due: Jun2 24, 2019
            </p>
            <p
              class="sc-AxhCb fQCxOQ"
              color="currentColor"
              font-size="16px"
            >
              12:00 pm
            </p>
          </div>
        </div>
      </div>
      <div
        class="Box-sc-1qu1edy-0 sc-fznWOq ELElF sc-fzolEj jKMuPZ"
      >
        <h3
          class="sc-AxheI sc-Axmtr eWqABJ"
          font-size="20px"
          font-weight="500"
        >
          Title
        </h3>
        <button
          aria-expanded="false"
          aria-haspopup="true"
          aria-label="Open"
          class="IconicButton__WrapperButton-sc-1u3dojp-1 jsJEWy sc-fzpans cKJzHK"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="sc-AxirZ jrPxI"
            color="currentColor"
            fill="currentColor"
            focusable="false"
            height="32px"
            icon="more"
            p="half"
            viewBox="0 0 24 24"
            width="32px"
          >
            <path
              d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
            />
          </svg>
        </button>
        <div
          class="Box-sc-1qu1edy-0 sc-AxjAm APdvp"
        >
          <div
            class="Box-sc-1qu1edy-0 ipHJHH"
          >
            <p
              class="sc-AxhCb hpmHVQ"
              color="currentColor"
              font-size="16px"
            >
              Item: Some item
            </p>
            <p
              class="sc-AxhCb hpmHVQ"
              color="currentColor"
              font-size="16px"
            >
              Quantity: 746.00 ea
            </p>
          </div>
          <div
            class="Box-sc-1qu1edy-0 jlPsmj"
          >
            <p
              class="sc-AxhCb fQCxOQ"
              color="currentColor"
              font-size="16px"
            >
              Due: Jun2 24, 2019
            </p>
            <p
              class="sc-AxhCb fQCxOQ"
              color="currentColor"
              font-size="16px"
            >
              12:00 pm
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Card Card 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-fznWOq ELElF"
    >
      I am a card.
    </div>
  </div>
</div>
`;

exports[`Storyshots Card Cardset 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 jlPsmj sc-fzqBkg buXsnU"
    >
      <div
        class="Box-sc-1qu1edy-0 sc-fznWOq ELElF"
      >
        I am a 1st card in a cardset.
      </div>
      <div
        class="Box-sc-1qu1edy-0 sc-fznWOq ELElF"
      >
        I am a 2nd card in a cardset.
      </div>
      <div
        class="Box-sc-1qu1edy-0 sc-fznWOq ELElF"
      >
        I am a 3rd card in a cardset.
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Card Custom card 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-fznWOq gRCqMA"
      color="white"
    >
      I am a custom card.
    </div>
  </div>
</div>
`;
